# Chapter01

./: .gitignore  .project  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: breakpad.cpp  ndcrash.c
app/src/main/java/com/dodola/breakpad/: MainActivity.java
app/src/main/java/ru/ivanarh/jndcrash/: NDCrash.java  NDCrashError.java  NDCrashService.java  NDCrashUtils.java
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml
breakpad-build/: build.gradle
breakpad-build/src/androidTest/java/com/sample/breakpad/: ExampleInstrumentedTest.java
breakpad-build/src/main/: AndroidManifest.xml
breakpad-build/src/main/cpp/: CMakeLists.txt  breakpad.cpp
breakpad-build/src/main/java/com/sample/breakpad/: BreakpadInit.java
breakpad-build/src/main/res/values/: strings.xml
breakpad-build/src/test/java/com/sample/breakpad/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sample/: .gitignore  CMakeLists.txt  build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/cpp/: crash.cpp
sample/src/main/java/com/dodola/breakpad/: MainActivity.java  SampleApplication.java
sample/src/main/res/drawable-v24/: ic_launcher_foreground.xml
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/values/: arrays.xml
tools/mac/: minidump_stackwalk
